--- a/css/style.css
+++ b/css/style.css
@@ -67,4 +67,27 @@
     font-size: 3vw;
     font-style: oblique; }
 
+#myBtn {
+  width: 12vw;
+  display: none;
+  position: fixed;
+  bottom: 2vw;
+  right: 2vw;
+  border: none;
+  outline: none;
+  background-color: #afafaf;
+  opacity: 0.4;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 10px;
+  font-size: 18px; }
+
+#myBtn:hover {
+  background-color: #555;
+  opacity: 1; }
+
+html {
+  scroll-behavior: smooth; }
+
 /*# sourceMappingURL=style.css.map */
