--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,16 @@
   padding: 0;
   box-sizing: border-box; }
 
+@keyframes show {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+@keyframes showOF {
+  from {
+    opacity: 1; }
+  to {
+    opacity: 0; } }
 .conteiner {
   max-width: 1470px;
   margin: 0 auto; }
@@ -43,6 +53,7 @@
     border-radius: 2vw; }
 
 .fonModal {
+  animation: show 1s;
   display: flex;
   width: 100%;
   height: 100%;
@@ -68,26 +79,66 @@
     font-style: oblique; }
 
 #myBtn {
-  width: 12vw;
   display: none;
+  width: 12vw;
   position: fixed;
   bottom: 2vw;
   right: 2vw;
   border: none;
   outline: none;
   background-color: #afafaf;
-  opacity: 0.4;
   color: white;
   cursor: pointer;
   padding: 15px;
   border-radius: 10px;
-  font-size: 18px; }
+  font-size: 18px;
+  transition-property: background-color;
+  transition-duration: 1s;
+  animation: show 1s; }
 
 #myBtn:hover {
   background-color: #555;
-  opacity: 1; }
+  opacity: 1;
+  transition-property: background-color;
+  transition-duration: 2s; }
 
 html {
   scroll-behavior: smooth; }
+
+@media all and (max-width: 340px) {
+  .conteiner .content .card {
+    width: 300px;
+    height: 380px;
+    margin: 10px; }
+    .conteiner .content .card .avatar {
+      width: 280px;
+      height: 280px;
+      margin: 10px; }
+      .conteiner .content .card .avatar img {
+        width: 280px;
+        height: 280px; } }
+@media (orientation: portrait) {
+  .cardModal {
+    width: 80vw;
+    height: 90vh;
+    border: solid black 1px;
+    margin: 10vh auto;
+    flex-direction: column;
+    margin-top: 5vh; }
+    .cardModal .img {
+      width: 70vw;
+      height: 70vw;
+      margin: 5vw;
+      border-radius: 3vw; }
+
+  .description {
+    margin-left: 5vw;
+    width: 70vw;
+    align-content: space-around; }
+    .description div {
+      font-size: 3vw;
+      margin-right: 1vw;
+      width: 30vw;
+      margin: 0; } }
 
 /*# sourceMappingURL=style.css.map */
